<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".SignupFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/name"
        android:textColor="@color/text_color"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/input_name"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="6dp"
        android:background="@drawable/input_fileds"
        android:hint="@string/john_doe"
        android:inputType="textPersonName"
        android:padding="12dp"
        android:textColor="@color/text_color" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/account_type"
        android:textColor="@color/text_color"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="8dp">

        <LinearLayout
            android:id="@+id/layoutIndividual"
            android:layout_width="155dp"
            android:layout_height="80dp"
            android:layout_marginEnd="19.5dp"
            android:clickable="true"
            android:focusable="true"
            android:background="@drawable/input_fileds"
            android:orientation="vertical"
            android:padding="11dp">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:contentDescription="@string/individual"
                android:src="@drawable/user" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:text="@string/individual"
                android:textAlignment="center"
                android:textColor="@color/text_color"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutBusiness"
            android:layout_width="155dp"
            android:layout_height="80dp"
            android:clickable="true"
            android:focusable="true"
            android:background="@drawable/input_fileds"
            android:orientation="vertical"
            android:padding="11dp">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:contentDescription="@string/business"
                android:src="@drawable/business" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:text="@string/business"
                android:textAlignment="center"
                android:textColor="@color/text_color"
                android:textSize="14sp" />

        </LinearLayout>

    </LinearLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/email"
        android:textColor="@color/text_color"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/input_email"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="6dp"
        android:background="@drawable/input_fileds"
        android:hint="@string/your_email_com"
        android:inputType="textEmailAddress"
        android:padding="12dp"
        android:textColor="@color/text_color" />

    <!-- Password -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="Password"
        android:textColor="@color/text_color"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/input_password"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="6dp"
        android:background="@drawable/input_fileds"
        android:hint="@string/ex_pass"
        android:inputType="textPassword"
        android:padding="12dp"
        android:textColor="@color/text_color" />

    <!-- Forgot Password -->
    <TextView
        android:id="@+id/forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="12dp"
        android:text="@string/forgot_password"
        android:textColor="@color/blue"
        android:textSize="14sp" />

    <!-- Login Button -->
    <Button
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/active_login_signup_btn"
        android:text="@string/create_account"
        android:textColor="@color/white"
        android:textStyle="bold" />


</LinearLayout>