<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".LoginFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/email"
        android:textColor="@color/text_color"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/input_email"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="6dp"
        android:background="@drawable/input_fileds"
        android:hint="@string/your_email_com"
        android:inputType="textEmailAddress"
        android:padding="12dp"
        android:textColor="@color/text_color" />

    <!-- Password -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="Password"
        android:textColor="@color/text_color"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/input_password"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="6dp"
        android:background="@drawable/input_fileds"
        android:hint="@string/ex_pass"
        android:inputType="textPassword"
        android:padding="12dp"
        android:textColor="@color/text_color" />

    <!-- Forgot Password -->
    <TextView
        android:id="@+id/forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="12dp"
        android:text="@string/forgot_password"
        android:textColor="@color/blue"
        android:textSize="14sp" />

    <!-- Login Button -->
    <Button
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/active_login_signup_btn"
        app:backgroundTint="@null"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textStyle="bold" />


</LinearLayout>